--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MALIT</title>
+    <link rel="icon" type="image/png" href="/src/assets/logo.svg">
   </head>
   <body>
     <div id="root"></div>
