--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MALIT</title>
-    <link rel="icon" type="image/png" href="/src/assets/Malit logo.png">
+    <link rel="icon" type="image/png" href="/Malit-App/src/assets/MalitLogo.png">
   </head>
   <body>
     <div id="root"></div>
